--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                         <div class="select-device pull-right">
                             device list
                         </div>
-                        <div class="pixel-slider pull-right">
-                            pixel-slider
+                        <div id="pixel-slider" class="pull-right">
+                            http://jqueryui.com/slider/#multiple-vertical
                         </div>
-                        <div class="content-size pull-right">
-                        content-size
-                            <input class="content-width" name="content-width">
-                            x
-                            <input class="content-height" name="content-height">
+                        <div class="content-size navbar-form pull-right">
+                            Custom size:
+                            <input class="input-mini" id="content-width" name="content-width">
+                            x:
+                            <input class="input-mini" id="content-height" name="content-width">
                         </div>
                     </div><!--/.nav-collapse -->
                 </div>
